



### v5 (2025-05-03)

*   **Fix:** Changed path alias imports (`@/lib/...`) to relative paths (`../../lib/...` or `../../../../lib/...`) in `src/app/app/page.tsx` and `src/app/app/report/[id]/page.tsx` to resolve build errors (Option B).
*   **Note:** Verified `src/app/layout.tsx` already used a relative path for `globals.css`.




### v6 (2025-05-03)

*   **Fix:** Re-verified and explicitly overwrote `src/app/app/page.tsx` and `src/app/app/report/[id]/page.tsx` to use relative paths (`../../lib/...` and `../../../../lib/...` respectively) instead of path aliases (`@/lib/...`) for `authOptions` and `prisma` imports, as requested.
*   **Note:** Local build (`npm run build`) confirms these specific files no longer cause alias-related build errors. However, the build still fails due to an unrelated type error (`Module '@prisma/client' has no exported member 'PrismaClient'`) in `src/app/api/auth/[...nextauth]/route.ts` which was present previously and is outside the scope of this specific fix.




### v7 (2025-05-03)

*   **Fix:** Implemented Option A: Ensured `src/lib/auth.ts`, `src/lib/prisma.ts`, and `src/app/globals.css` exist. Restored `@/lib/...` alias imports in `src/app/app/page.tsx` and `src/app/app/report/[id]/page.tsx`. Verified `tsconfig.json` alias configuration. Performed clean install (`rm -rf node_modules .next && npm install`) and `npx prisma generate`.
*   **Note:** Local build (`npm run build`) now compiles successfully, confirming the alias imports in the specified page components are resolved. However, the build still fails during the linting/type-checking phase due to the pre-existing, unrelated type error (`Module '@prisma/client' has no exported member 'PrismaClient'`) in `src/app/api/auth/[...nextauth]/route.ts`. This error is outside the scope of fixing the page component alias imports.
